[package]
name = "http_redirect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.8"
http-body = "0.4.5"
pin-project-lite = "0.2.9"
tower-layer = "0.3.1"
tower-service = "0.3.2"
tracing = "0.1.36"

[dev-dependencies]
tower = { version = "0.4.13", features = ["make", "util"] }
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
hyper = "0.14.20"
